Typo in tech.html fixed

--- a/app/templates/tech.html
+++ b/app/templates/tech.html
@@ -158,7 +158,7 @@
             <div id="kubernetes" class="tech-content-panel" style="display: none;">{% include 'snippets/Kubernetes.html' %}</div>
             <div id="terraform" class="tech-content-panel" style="display: none;">{% include 'snippets/Terraform.html' %}</div>
             <div id="pulumi" class="tech-content-panel" style="display: none;">{% include 'snippets/Pulumi.html' %}</div>
-            <div id="artifactory" class="tech-content-panel" style="display: none;">{% include 'snippets/Artifactory.html' %}</div>
+            <div id="artifactory" class="tech-content-panel" style="display: none;">{% include 'snippets/artifactory.html' %}</div>
             <div id="xray" class="tech-content-panel" style="display: none;">{% include 'snippets/Xray.html' %}</div>
             <div id="aws" class="tech-content-panel" style="display: none;">{% include 'snippets/AWS.html' %}</div>
             <div id="prometheus" class="tech-content-panel" style="display: none;">{% include 'snippets/Prometheus.html' %}</div>
