Terraform page added link to github repo

--- a/app/templates/snippets/Terraform.html
+++ b/app/templates/snippets/Terraform.html
@@ -1,8 +1,14 @@
-<h3>Terraform Plan</h3>
+<h3>Terraform (modules)</h3>
 
 <div class="snippet-intro">
     <p>
-        <strong>Terraform TL;DR:</strong> It's a tool for building, changing, and versioning infrastructure safely and efficiently. You write simple, human-readable code to define your cloud or on-prem resources, and Terraform manages the entire lifecycle for you.
+        Terraform is my favorite tool for building, changing, and versioning infrastructure safely and efficiently. <br>
+        I can write simple, human-readable code to define my (AWS) resources, and Terraform manages the entire lifecycle for me.
+        <br><br>
+        I am using 3 modules for terraform - vpc, eks and argocd. <br>
+        This modular structure allows me to manage each on its own and makes it easier to manage, add and troubleshoot.
+        <br><br>
+        For a better view of the whole files and structure visit the following link: <a href="https://github.com/liormilliger/mywebsite-iac.git" style="color: inherit;"><b>https://github.com/liormilliger/mywebsite-iac.git</b></a>
     </p>
 </div>
 
